tests/NormalTests/paczka1/small_fuzzy/54521043.err
Error in line 4: oWTTT9x S364 65,4
Error in line 12: oWTTT9x A834 2,0
